--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -66,13 +66,13 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <script type="module" src="./task1.js"></script>
-    <script type="module" src="./task2.js"></script>
-    <script type="module" src="./task3.js"></script>
-    <script type="module" src="./task4.js"></script>
-    <script type="module" src="./task5.js"></script>
-    <script type="module" src="./task6.js"></script>
-    <script type="module" src="./task7.js"></script>
+    <script type="module" src="./skripts/task1.js"></script>
+    <script type="module" src="./skripts/task2.js"></script>
+    <script type="module" src="./skripts/task3.js"></script>
+    <script type="module" src="./skripts/task4.js"></script>
+    <script type="module" src="./skripts/task5.js"></script>
+    <script type="module" src="./skripts/task6.js"></script>
+    <script type="module" src="./skripts/task7.js"></script>
     <!-- <script type="module" src="./task8.js"></script> -->
     <!-- <script type="module" src="./task9.js"></script> -->
     <!-- <script type="module" src="./task10.js"></script> -->
