--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <script type="module" src="./skripts/task1.js"></script>
-    <script type="module" src="./skripts/task2.js"></script>
-    <script type="module" src="./skripts/task3.js"></script>
-    <script type="module" src="./skripts/task4.js"></script>
-    <script type="module" src="./skripts/task5.js"></script>
-    <script type="module" src="./skripts/task6.js"></script>
-    <script type="module" src="./skripts/task7.js"></script>
+    <script type="module" src="./js/task1.js"></script>
+    <script type="module" src="./js/task2.js"></script>
+    <script type="module" src="./js/task3.js"></script>
+    <script type="module" src="./js/task4.js"></script>
+    <script type="module" src="./js/task5.js"></script>
+    <script type="module" src="./js/task6.js"></script>
+    <script type="module" src="./js/task7.js"></script>
     <!-- <script type="module" src="./task8.js"></script> -->
     <!-- <script type="module" src="./task9.js"></script> -->
     <!-- <script type="module" src="./task10.js"></script> -->
